--- a/src/main/resources/frontend/src/app/dashboard/dashboard.html
+++ b/src/main/resources/frontend/src/app/dashboard/dashboard.html
@@ -19,7 +19,6 @@
     overflow: hidden;
     background-size: auto 100%; margin: -20px;">
 
-    <p-card header="Hallo">
-    </p-card>
+    Dashboard
 
 </div>
